Endpoint to list all participants of an event. Swagger doc inclued.
